--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -34,8 +34,8 @@
             <Label Grid.Row="0" Grid.Column="2" Content="{Binding BestOf}" HorizontalAlignment="Right" Padding="12" FontSize="16" FontWeight="Bold"></Label>
 
             <Label Grid.Row="2" Grid.Column="0" Content="{Binding Player1.Name}" HorizontalAlignment="Left" Padding="12" FontSize="16" FontWeight="Bold"></Label>
-            <Image Grid.Row="2" Grid.Column="0" Visibility="{Binding PlayerOneTurnIndicatorIsVisible}" Source="/Resources/indicator.png" Height="10" Width="10" />
-            <Image Grid.Row="2" Grid.Column="0" Visibility="{Binding PlayerOneStartedLegIndicatorIsVisible}" Source="/Resources/turnindicator-left.png" Height="10" Width="10" Margin="30,0,0,0"/>
+            <Image Grid.Row="2" Grid.Column="0" Visibility="{Binding PlayerOneTurnIndicatorIsVisible}" Source="/Resources/indicator.png" Height="10" Width="10" HorizontalAlignment="Right"/>
+            <Image Grid.Row="2" Grid.Column="0" Visibility="{Binding PlayerOneStartedLegIndicatorIsVisible}" Source="/Resources/turnindicator-left.png" Height="10" Width="10" HorizontalAlignment="Right" Margin="0,0,30,0"/>
 
             <Grid Grid.Column="1">
                 <Grid.ColumnDefinitions>
@@ -48,10 +48,35 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
 
+                <Grid Grid.Row="0" Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Padding="12" FontSize="16" FontWeight="Bold">
+                        <Run Text="Sets:"/>
+                        <Run Text="{Binding Player1SetScore}"/>
+                    </TextBlock>
+                    <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Padding="12" FontSize="16" FontWeight="Bold">
+                        <Run Text="Legs:"/>
+                        <Run Text="{Binding Player1LegScore}"/>
+                    </TextBlock>
+
+                    <TextBlock Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" Padding="12" FontSize="16" FontWeight="Bold">
+                        <Run Text="Sets:"/>
+                        <Run Text="{Binding Player2SetScore}"/>
+                    </TextBlock>
+                    <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Padding="12" FontSize="16" FontWeight="Bold">
+                        <Run Text="Legs:"/>
+                        <Run Text="{Binding Player2LegScore}"/>
+                    </TextBlock>
+                </Grid>
                 <!-- <Label Grid.Row="0" Grid.Column="0" Content="{Binding Player1SetScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold" Margin="0,0,30,0"></Label> -->
-                <Label Grid.Row="0" Grid.Column="0" Content="{Binding Player1LegScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold"></Label>
-                <Label Grid.Row="0" Grid.Column="1" Content=":" Padding="12" FontSize="24" FontWeight="Bold"></Label>
-                <Label Grid.Row="0" Grid.Column="2" Content="{Binding Player2LegScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold"></Label>
                 <!-- <Label Grid.Row="0" Grid.Column="2" Content="{Binding Player2SetScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold" Margin="0,0,30,0"></Label> -->
             </Grid>
 
@@ -60,8 +85,8 @@
                 <Run Text="{Binding Player1Average}"/>
             </TextBlock>
 
-            <Label Grid.Row="1" Grid.Column="1" Content="{Binding SetText, StringFormat='Leg {0}'}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold"></Label>
-            <Label Grid.Row="1" Grid.Column="1" Content="{Binding LegText, StringFormat='Leg {0}'}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold" Margin="0,30,0,0"></Label>
+            <Label Grid.Row="1" Grid.Column="1" Content="{Binding SetText, StringFormat='Leg {0}'}" HorizontalAlignment="Center" Padding="12" FontSize="14" FontWeight="Bold"></Label>
+            <Label Grid.Row="1" Grid.Column="1" Content="{Binding LegText, StringFormat='Leg {0}'}" HorizontalAlignment="Center" Padding="12" FontSize="14" FontWeight="Bold" Margin="0,30,0,0"></Label>
 
             <TextBlock Grid.Row="1" Grid.Column="2" Margin="12,12,12,12" HorizontalAlignment="Right" FontSize="14">
                 <Run Text="Average: "/>
@@ -69,8 +94,8 @@
             </TextBlock>
             
             <Label Grid.Row="2" Grid.Column="2" Content="{Binding Player2.Name}" HorizontalAlignment="Right" Padding="12" FontSize="16" FontWeight="Bold"></Label>
-            <Image Grid.Row="2" Grid.Column="2" Visibility="{Binding PlayerTwoTurnIndicatorIsVisible}" Source="/Resources/indicator.png" Height="10" Width="10" />
-            <Image Grid.Row="2" Grid.Column="2" Visibility="{Binding PlayerTwoStartedLegIndicatorIsVisible}" Source="/Resources/turnindicator-right.png" Height="10" Width="10" Margin="0,0,30,0" />
+            <Image Grid.Row="2" Grid.Column="2" Visibility="{Binding PlayerTwoTurnIndicatorIsVisible}" Source="/Resources/indicator.png" Height="10" Width="10" HorizontalAlignment="Left" />
+            <Image Grid.Row="2" Grid.Column="2" Visibility="{Binding PlayerTwoStartedLegIndicatorIsVisible}" Source="/Resources/turnindicator-right.png" Height="10" Width="10" HorizontalAlignment="Left" Margin="30,0,0,0"/>
 
             <Border BorderBrush="Black" BorderThickness="1" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center">
                 <Grid MinWidth="320">
@@ -151,14 +176,14 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <ListView ItemsSource="{Binding Player2Remainders}" Grid.Row="0" Grid.Column="0" Margin="0" MinWidth="64" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                    <ListView ItemsSource="{Binding Player2Remainders}" Grid.Row="0" Grid.Column="0" Margin="0" MinWidth="64" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                         <ListView.View>
                             <GridView AllowsColumnReorder="False">
                                 <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding}"></GridViewColumn>
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <ListView  ItemsSource="{Binding Player2Turns}" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="1" HorizontalAlignment="Center" BorderThickness="0" MinWidth="256" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                    <ListView  ItemsSource="{Binding Player2Turns}" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="1" HorizontalAlignment="Center" BorderThickness="0" MinWidth="256" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                         <ListView.Resources>
                             <Style TargetType="{x:Type TextBlock}">
                                 <Setter Property="Foreground" Value="{Binding Path=Valid, Converter={StaticResource BrushColorConverterKey}}"></Setter>
